post sobre DTU y tamaño

--- a/_posts/2021-02-12-Welcome.md
+++ b/_posts/2021-02-12-Welcome.md
@@ -1,5 +1,5 @@
 ---
-title: "Welcome to this blog"
+title: "Bienvenidos al blog"
 last_modified_at: 2021-02-19T16:20:02-05:00
 categories:
   - blog
@@ -8,18 +8,17 @@ tags:
   - update
 ---
 
-You'll find this post in your `_posts` directory. This is a work in progess blog so if you got any doubt please drop me a line on the channles of the footer
+Podras encontrar los post en el directorio `_posts`. Esta es una página que está en contrucción, así que si tenes alguna consulta no dudes en contactarme por los canales que ves en el pie de página.
 
+```python
+def print_hi(name):
+  print("Hola, ", name)
 
-```ruby
-def print_hi(name)
-  puts "Hi, #{name}"
-end
-print_hi('Tom')
-#=> prints 'Hi, Tom' to STDOUT.
+print_hi('Felipe')
+#=> prints 'Hola, Tom' to STDOUT.
 ```
 
-Check out the [Jekyll docs][jekyll-docs] for more info on how to get the most out of Jekyll. File all bugs/feature requests at [Jekyll’s GitHub repo][jekyll-gh]. If you have questions, you can ask them on [Jekyll Talk][jekyll-talk].
+Puedes comprobar la documentación de [Jekyll docs][jekyll-docs] por más información sbre Jekyll. Para reportar un bug(featureen  [Jekyll’s GitHub repo][jekyll-gh]. Si tenes alguna otra consulta, puedes hacerla en [Jekyll Talk][jekyll-talk].
 
 [jekyll-docs]: https://jekyllrb.com/docs/home
 [jekyll-gh]:   https://github.com/jekyll/jekyll
