contador de visitas

--- a/_posts/2021-02-12-Welcome.md
+++ b/_posts/2021-02-12-Welcome.md
@@ -8,6 +8,7 @@ tags:
   - update
 ---
 
+![visitors](https://visitor-badge.glitch.me/badge?page_id=includewareok.blog.2021-02-12-Welcome")
 Podras encontrar los post en el directorio `_posts`. Esta es una página que está en contrucción, así que si tenes alguna consulta no dudes en contactarme por los canales que ves en el pie de página.
 
 ```python
