correcion titulo y detalles

--- a/_posts/2021-03-17-build-dbms-001.md
+++ b/_posts/2021-03-17-build-dbms-001.md
@@ -1,13 +1,15 @@
 ---
-title: Vamos a construir un simple motor de base de datos
+title: "Construir un simple motor de base de datos - Part 1"
 excerpt_separator: "<!--more-->"
-modified: 2021-03-09
+permalink: /build-dbms-001
+modified: 2021-03-17    
 classes: wide
+comments: true
 categories:
   - Blog
   - SQL
   - internals
-  -dotnet
+  - dotnet
 tags:
   - Post Formats
   - readability
@@ -29,7 +31,7 @@ Como programador y DBA las bases de datos son algo de mi día a día y si bien t
 {: .notice}
 
 
-## SQLLite
+## SQLite
  Para hacer el trabajo más simple, nos vamos a basar en el [SQLite](https://www.sqlite.org/arch.html) para la realización del motor. 
  **:information_source:** [SQLite es el motor más usado en el mundo](https://www.sqlite.org/mostdeployed.html) porque viene instalado por defecto en celulares, SO (WIndows, Mac) y se calcula que anda en el entorno de los 10mil millones y fue escrito inicialmente por 3 personas. Además un excelente ejemplo de Open-Source pero no Open-Contribution y 
 {: .notice--info}
@@ -38,7 +40,7 @@ Volviendo al tema que nos interesa, vamos a repasar la arquitectura de SQLite. V
 
 ![Imagen-002](/assets/images/2021-03/17/002.png)
 
-Lo primero que tenemos que entender es que `SQL` y todos sus hermanos `DDL`, `DML` son lenguajes compilados y por tanto 
+Lo primero que tenemos que entender es que `SQL` y todos sus hermanos `DDL`, `DML` son lenguajes compilados y por tanto deben ser compilados a lenguaje que la VM lo pueda ejecutar. 
 
 Por lo tanto haciendo el paralelismo vemos que el `SQL Compiler` sería la capa gráfica o de presentación también llamada `Presentation Tier`. En esta capa se busca realizar un análisis sintáctico y semántico de las sentencias ingersadas y si son validas generar el código fuente (arreglo de bytes) para pasar a la siguiente capa. Sus componentes son:
 * Tokenizer: Cuando en el `input` del prompt hay sentencias SQL, esta parte se encarga de separar el mismo en tokens. Aquí se separa el texto SQL en toknes y se le envian al parser. Es una suerte de analizador sintáctico 
@@ -126,6 +128,3 @@ db >
 .exit
 
 ```
-
-
-Finally, we parse and execute the command. There is only one recognized command right now : .exit, which terminates the program. Otherwise we print an error message and continue the loop.
