quitar viejos post de ejemplo y correcion de escritura

--- a/_posts/2021-03-17-build-dbms-001.md
+++ b/_posts/2021-03-17-build-dbms-001.md
@@ -11,16 +11,16 @@ categories:
   - internals
   - dotnet
 tags:
-  - Post Formats
-  - readability
-  - standard
+  - Blog
+  - SQL
+  - internals
   - dotnet
 ---
 
 ![visitors](https://visitor-badge.glitch.me/badge?page_id=includewareok.blog.2021-03-17-build-dbms-001")
 
 # Introducción
-Como programador y DBA las bases de datos son algo de mi día a día y si bien trabajo mayormente con MSSQL, siempre me dió mucha curisidad saber como funciona realmente un [RDMS - sistema de gestión de bases de datos](https://es.wikipedia.org/wiki/Sistema_de_gesti%C3%B3n_de_bases_de_datos_relacionales) por sus siglas en inglés. Para poder aprender más y poder compartir lo aprendido voy a construir una base de datos desde 0. 
+Como programador y DBA las bases de datos son algo de mi día a día y si bien trabajo mayormente con MSSQL, siempre me dió mucha curiosidad saber cómo funciona realmente un [sistema de gestión de bases de datos](https://es.wikipedia.org/wiki/Sistema_de_gesti%C3%B3n_de_bases_de_datos_relacionales), `RDMS`por sus siglas en inglés. Para poder aprender más y poder compartir lo aprendido voy a construir una base de datos desde 0. 
 
 <!--more-->
 
@@ -33,7 +33,7 @@ Como programador y DBA las bases de datos son algo de mi día a día y si bien t
 
 ## SQLite
  Para hacer el trabajo más simple, nos vamos a basar en el [SQLite](https://www.sqlite.org/arch.html) para la realización del motor. 
- **:information_source:** [SQLite es el motor más usado en el mundo](https://www.sqlite.org/mostdeployed.html) porque viene instalado por defecto en celulares, SO (WIndows, Mac) y se calcula que anda en el entorno de los 10mil millones y fue escrito inicialmente por 3 personas. Además un excelente ejemplo de Open-Source pero no Open-Contribution y 
+ **:information_source:** [SQLite es el motor más usado en el mundo](https://www.sqlite.org/mostdeployed.html) porque viene instalado por defecto en celulares, SO (WIndows, Mac) y se calcula que anda en el entorno de los 10mil millones y fue escrito inicialmente por 3 personas. Además un excelente ejemplo de Open-Source pero no Open-Contribution.
 {: .notice--info}
 
 Volviendo al tema que nos interesa, vamos a repasar la arquitectura de SQLite. Voy a intentar hacer un paralelismo el diseño de arquitectura de software en 3 capaz. Por lo tanto lo primero que vamos a ver es su diseño desde una visión más macro:
@@ -42,11 +42,11 @@ Volviendo al tema que nos interesa, vamos a repasar la arquitectura de SQLite. V
 
 Lo primero que tenemos que entender es que `SQL` y todos sus hermanos `DDL`, `DML` son lenguajes compilados y por tanto deben ser compilados a lenguaje que la VM lo pueda ejecutar. 
 
-Por lo tanto haciendo el paralelismo vemos que el `SQL Compiler` sería la capa gráfica o de presentación también llamada `Presentation Tier`. En esta capa se busca realizar un análisis sintáctico y semántico de las sentencias ingersadas y si son validas generar el código fuente (arreglo de bytes) para pasar a la siguiente capa. Sus componentes son:
+Por lo tanto haciendo el paralelismo vemos que el `SQL Compiler` sería la capa gráfica o de presentación también llamada `Presentation Tier`. En esta capa se busca realizar un análisis sintáctico y semántico de las sentencias ingresadas y si son validas generar el código fuente (arreglo de bytes) para pasar a la siguiente capa. Sus componentes son:
 * Tokenizer: Cuando en el `input` del prompt hay sentencias SQL, esta parte se encarga de separar el mismo en tokens. Aquí se separa el texto SQL en toknes y se le envian al parser. Es una suerte de analizador sintáctico 
 * Parser: En esta sección se le da sentido a los token en bases al contexto, una vez realizadas las validaciones es tiempo de que se genere el `parser tree`, si les interesa esto les dejo el [proyecto del 1er año de UDE 2018](https://github.com/felipeschneider88/UDE-Taller-I-2018) donde construimos un compilador de un lenguaje super sencillo escrito en `C++`
 * Code Generator: Una vez que el `input` fue validado, es tiempo de crear el código fuente para pasar al `query planer` o a veces también llamado `query optimizer` para buscar la mejor forma/algoritmo para ejecutar dicho código
- **:information_source:** El `Query Planner` en generar utiliza metodos herísticos para encontrar en un tiempo acotado un buen plan _auque puede no ser el mejor_, las nuevas generaciones de QP se están enfocando en optimización por costos en lugar de reglas.
+ **:information_source:** El `Query Planner` en generar utiliza metodos herísticos para encontrar en un tiempo acotado un buen plan _aunque puede no ser el mejor_, las nuevas generaciones de QP se están enfocando en optimización por costos en lugar de reglas.
 {: .notice--info}
 
 
@@ -104,7 +104,7 @@ public static void print_promt()
 }
 ```
 
-Vamos definir una variable `inputBuffer` para leer toda la línea y paresamos y ejecutamos el comando. En este primer caso solo soportamos el comando `.exit` que termina el programa, de lo contrario nos muestra un mensaje de error.
+Vamos definir una variable `inputBuffer` para leer toda la línea y parseamos y ejecutamos el comando. En este primer caso solo soportamos el comando `.exit` que termina el programa, de lo contrario nos muestra un mensaje de error.
 
 ``` c#
 inputBuffer = Console.ReadLine();
