--- a/_posts/2021-03-17-build-dbms-001.md
+++ b/_posts/2021-03-17-build-dbms-001.md
@@ -45,21 +45,20 @@ Lo primero que tenemos que entender es que `SQL` y todos sus hermanos `DDL`, `DM
 Por lo tanto haciendo el paralelismo vemos que el `SQL Compiler` sería la capa gráfica o de presentación también llamada `Presentation Tier`. En esta capa se busca realizar un análisis sintáctico y semántico de las sentencias ingresadas y si son validas generar el código fuente (arreglo de bytes) para pasar a la siguiente capa. Sus componentes son:
 * Tokenizer: Cuando en el `input` del prompt hay sentencias SQL, esta parte se encarga de separar el mismo en tokens. Aquí se separa el texto SQL en toknes y se le envian al parser. Es una suerte de analizador sintáctico 
 * Parser: En esta sección se le da sentido a los token en bases al contexto, una vez realizadas las validaciones es tiempo de que se genere el `parser tree`, si les interesa esto les dejo el [proyecto del 1er año de UDE 2018](https://github.com/felipeschneider88/UDE-Taller-I-2018) donde construimos un compilador de un lenguaje super sencillo escrito en `C++`
-* Code Generator: Una vez que el `input` fue validado, es tiempo de crear el código fuente para pasar al `query planer` o a veces también llamado `query optimizer` para buscar la mejor forma/algoritmo para ejecutar dicho código
+* Code Generator: Una vez que el `input` fue validado, es tiempo de crear el código fuente para pasar al [query planer](https://sqlite.org/queryplanner-ng.html) o a veces también llamado `query optimizer` para buscar la mejor forma/algoritmo para ejecutar dicho código.
  **:information_source:** El `Query Planner` en generar utiliza metodos herísticos para encontrar en un tiempo acotado un buen plan _aunque puede no ser el mejor_, las nuevas generaciones de QP se están enfocando en optimización por costos en lugar de reglas.
 {: .notice--info}
 
 
  El siguiente escalon es el `Core` que sería la capa de lógica de negocio `Business Logics Tier`, esta se compone de los siguientes componentes:
- * Interface:
- * SQL Command Processor:
- * Virtual Machine: 
+ * Interface: Define las interfaces que son expuestas para ser consumidas por la capa de presentación.
+ * SQL Command Processor: Como su nombre lo dice, se encarga de procesar los comandos que recibe de la capa superior, pensemos por ejemplo en archivos con varios comandos en el mismo batch.
+ * Virtual Machine: Se encarga de **ejecutar** los programas y se encarga de hacer las llamadas necesrias al subsistema de archivos, hacer calculos matemáticos, agrupaciones y demás.
 
  Al final de nuestro está nos encontramos con `Backend` que sería nuestra capa de accesos a datos o `Data Managment Tier` que se compone por estos componentes:
- * B-Tree: 
- * Pager: 
- * OS Interface: 
-
+ * B-Tree: Cada `B-Tree` se compone de varios nodos. En general se utiliza está estructura de datos porque tiene un orden de acceso relativamente bajo. Cada nodo contiene una página. 
+ * Pager: Esta parte recibe comandos para hacer lecturas o escritoras en las páginas de datos. En algunos sistemas se llama también `buffer pool` y se encarga de controlar el ciclo de vida de las páginas en memoria
+ * OS Interface: La `os interface` es una forma de abstraer el SO del motor y permite usar diferentes subsistemas dependiendo como es complicado. Para simplificar las cosas en este ejemplo no vamos a soportar multi plataforma.
 
 
 ## Un simple REPL
