add titles good

--- a/_posts/2021-03-10-etl.md
+++ b/_posts/2021-03-10-etl.md
@@ -13,7 +13,7 @@ categories:
 
 ![visitors](https://visitor-badge.glitch.me/badge?page_id=includewareok.blog.2021-03-10-etl")
 
-# Introducción
+## Introducción
 
 Hace un tiempo leí un articulo que hacía una comparativa sobre la `ingenieria de datos` y la `ingenieria civil`, en el mismo se describian 4 piesas fundamentales para realizar de forma satisfactoria esto.
 * La materia prima debe ser llevada al lugar de trabajo.
@@ -46,14 +46,14 @@ Teniendo todo esto en cuenta, tenemos básicamente 3 operaciones para realizar c
 
 Ahora veamos las diferentes formas de hacerlo.
 
-## Diferentes casos
+### Diferentes casos
 Vamos a describir los diferentes casos posibles en base a lo anterior:
 * EL: El caso más simple es cuando simplemento extraemos un dato y lo llevamos a otro lugar, esto o bien puede ser porque tenemos el mismo esquema-normalizado en el sistema original y el que va a hacer el analisis o porque por ahora solo nos interesa tener una copia del dato en si, por ejemplo, tenemos rotación de logs cada 7 días pero queremos poder hacer un analisis el un periodo más largo de tiempo.
 * ETL: El siguiente caso es el que le da nombre a esta etapa y suma a la anterior, una transofmración en el medio. Esta transofmación puede ser bien por necesidades del negocio, para mejorar la salud de los datos o normalizar los datos.
 * ELT: Es un caso similar al anterior, pero la etapa de transformación se realiza ya en el destino.
 * ETLT: Es una mezcla de los anteriores dos, hace una transoformación inicial antes de cargar y una posterior.
 
-## Cuando usar cual
+### Cuando usar cual
 Habiendo visto las diferentes formas de realizar estos procesos, debemos plantearnos entonces, ¿Cual usar? y ¿Cúando? Por lo tantos vamos a preferir 
 * EL: Cuando los datos ya cuentan con buenca calidad y comparten una normalización entre los sistemas de origen y destino.
 * ETL: Nos importa la calidad de los datos que estamos almacenando y aplicar una capa de seguridad _enmascarador_ o _anonimización_ de los mismos.
