cambiar nombre de archivos y demás

--- a/_posts/2021-03-22-etl.md
+++ b/_posts/2021-03-22-etl.md
@@ -1,15 +1,18 @@
 ---
-title: procesos ETL
+title: "procesos ETL"
+excerpt_separator: "<!--more-->"
 permalink: /etl-101
-modified: 2021-03-15
+modified: 2021-03-22   
+classes: wide
 comments: true
 categories:
   - Blog
-  - ingenieria de datos
+  - "ingenieria de datos"
   - SQL
   - NoSQL
+tags:
+  - "ingenieria de datos"
 ---
-
 
 ![visitors](https://visitor-badge.glitch.me/badge?page_id=includewareok.blog.2021-03-10-etl")
 
