agregar imagen faltante

--- a/_posts/2021-03-22-etl.md
+++ b/_posts/2021-03-22-etl.md
@@ -48,9 +48,10 @@ Teniendo todo esto en cuenta, tenemos básicamente 3 operaciones para realizar c
 * _Transform_: La **T** hace referencia a las técnicas que nombramos antes, transoforman el dato de alguna forma, en general son operaciones simples.
 * _Load_: La **L** por `load` en inglés, hace referencia a la operación de carga del dato a nuestro almacen, acá hablo de almacen y no especificamente que tipo porque eso depende de nuestra estrategía.
 
-||ETL||ELT||
-|----|-----|
-|![ETL](/assets/images/2021-03/22/etl.png) | ![ELT](/assets/images/2021-03/22/elt.png)|
+| ETL | ELT |
+|---|---|
+| ![ETL](/assets/images/2021-03/22/etl.png) |  ![ELT](/assets/images/2021-03/22/elt.png) |
+
 **:information_source:** 
 Imagenes obtenidas del [sitio de documentación de Microsoft](https://docs.microsoft.com/es-es/azure/architecture/data-guide/relational-data/etl)
 {: .notice}
