--- a/_posts/2021-03-17-build-dbms-002.md
+++ b/_posts/2021-03-17-build-dbms-002.md
@@ -29,7 +29,7 @@ En la [primer parte]({% post_url 2021-03-17-build-dbms-001 %}) dimos los primero
 
 ![Imagen-002](/assets/images/2021-03/17/001.png)
 
-Separar en 2 partes esto nos da algunas vengajas:
+Separar en 2 partes esto nos da algunas ventajas:
 * Reducir la complejidad de cada parte, en ingenieria de software se llama [principio de responsabilidad única](https://es.wikipedia.org/wiki/Principio_de_responsabilidad_%C3%BAnica)
 * Permite compilar consultas comunes una vez y almacenar en cache el bytecode para mejorar la performance.
 
